fix tiny issues with dark mode

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,6 @@ html, body {
 body {
     font-family: Arial, sans-serif;
 	font-size: 18px; /* Use relative units for font-size */
-	background: #ff6600; /* Fallback color */
 	background: linear-gradient(to bottom, #ff6600, #ffcc00);
 	display: flex;
 	flex-direction: column; /* Stack items vertically */
